[package]
name = "launchpad"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tello = "0.4.1"
actyx_sdk = { version = "0.2.1", features = ["client"]}
futures = "0.3.16"
url = "2.2.2"
anyhow = "1.0.43"
tokio = { version = "1.10.0", features = ["full"] }
async-trait = "0.1.51"
rppal = "0.12.0"