[package]
name = "launchpad"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# proc-macro = true

[dependencies]
tello = "0.4.1"
actyx_sdk = { version = "0.2.1", features = ["client"]}
futures = "0.3.16"
url = "2.2.2"
anyhow = "1.0.43"
tokio = { version = "1.10.0", features = ["full"] }
tokio-stream = "0.1.7"
async-trait = "0.1.51"
rppal = { version = "0.12.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
pin-project-lite = "0.2.7"
serde_json = "1.0.66"
tokio-stream-ext = "0.1.4"
syn = { version="1.0.75", features=["extra-traits"]}

[features]
hardware = ["rppal"]